[package]
name = "hello_cargo"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.43", features = ["lazy", "csv", "describe", "random"] }
smartcore = { version = "0.3", features = ["serde"] }
ndarray = "0.16"
rayon = "1.7"
rand = "0.8"
rand_chacha = "0.3"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
linfa = "0.7"
linfa-linear = "0.7"
linfa-trees = "0.7"
linfa-datasets = "0.7"
anyhow = "1.0"
criterion = "0.5"


[[bin]]
name = "complex_ml_pipeline"
path = "src/complex_ml_pipeline.rs"
